--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MoneyManager</string>
+    <string name="error_check_internet_connection">Please check your internet connection !</string>
+    <string name="error_oops_error_occurred">Oops ! An error occurred</string>
 </resources>
