--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MoneyManager</string>
     <string name="error_check_internet_connection">Please check your internet connection !</string>
     <string name="error_oops_error_occurred">Oops ! An error occurred</string>
+    <string name="sign_in_with_google">Sign in With Google</string>
 </resources>
